[package]
name = "rust_summ_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0"
tch = "0.4.1"
rust-bert = "0.15.1"
serde = "1.0"
log = "0.4"
env_logger = "0.8"
openssl = { version = "0.10", features = ["vendored"] }